
syntax = "proto3";

package CustomerVehicle_app_package;

service CustomerVehicleApp {
    rpc getCustomerVehicle (customerId) returns (DbCustomerVehicle) {}
    rpc createCustomerVehicle (CustomerVehicle) returns (DbCustomerVehicle) {}
    rpc deleteCustomerVehicle (customerId) returns (response) {}
    rpc updateCustomerVehicle (CustomerVehicle) returns (DbCustomerVehicle) {}
    rpc getVehicle (CustomerVehicleId) returns (DbCustomerVehicle) {}

}
message customerVehicles {
    repeated DbCustomerVehicle CustomerVehicle = 1;
    string err_status = 2;
}

message CustomerVehicle {
    string vehicleId = 1;
    string customerId = 2;
    string plateNo = 3;
    string color = 4;
    string mileage = 5;

}

message DbCustomerVehicle {
    string id = 1;
    string vehicleId = 2;
    string customerId = 3;
    string plateNo = 4;
    string color = 5;
    string mileage = 6;
    string err_status = 7;
}


message CustomerVehicleId {
    string CustomerVehicleId = 1;

}

message response {
    string status = 1  ;
    string err_status = 2;
}


message customerId {
    string customerId = 1;
}


